input box is not showing; maybe due to color or other issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 
-/* Tailwind use */
+/* Tailwind used for 2nd calculator */
 
+.phone {
+	width: 275px;
+}
 
 
 /* * old CSS for previous calculator design
